Muchos ajustes pequeños, como pequeñas correcciones de diseño, control de que todos los links del index funcionen bien, lo mismo para la seecion del huevo

--- a/es/huevo.html
+++ b/es/huevo.html
@@ -208,21 +208,21 @@
 
 					<a id="closeNav1" data-toggle="" href="#footer-home" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer">Home<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-home" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-						<li class="item-footer"><a class="item-footer" href="index.html">Acerca de GHM</a></li>
-						<li class="item-footer"><a class="item-footer" href="huevo.html">Gustavo Muñoz Lorenzo</a></li>
-						<li class="item-footer"><a class="item-footer" href="index.html">Equipo</a></li>
-						<li class="item-footer"><a class="item-footer" href="index.html">Clientes</a></li>
-						<li class="item-footer"><a class="item-footer" href="index.html">Noticias</a></li>
-						<li class="item-footer"><a class="item-footer" href="index.html">Contacto</a></li>
+						<li class="item-footer"><a class="item-footer" href="index.html#intro">Acerca de GHM</a></li>
+						<li class="item-footer"><a class="item-footer" href="huevo.html#huevo">Gustavo Muñoz Lorenzo</a></li>
+						<li class="item-footer"><a class="item-footer" href="index.html#equipo">Equipo</a></li>
+						<li class="item-footer"><a class="item-footer" href="index.html#clientes">Clientes</a></li>
+						<li class="item-footer"><a class="item-footer" href="index.html#noticias">Noticias</a></li>
+						<li class="item-footer"><a class="item-footer" href="index.html#contacto">Contacto</a></li>
 					</ul>
 
 					<a id="closeNav2" data-toggle="" href="#footer-audiovisual" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Audiovisual<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-audiovisual" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-						<li class="item-footer"><a href="audiviosual/institucional.html" class="item-footer">Institucional</a></li>
-						<li class="item-footer"><a href="audiviosual/infraestructura.html" class="item-footer">Infraestructura</a></li>
-						<li class="item-footer"><a href="audiviosual/educativo.html" class="item-footer">Educativo</a></li>
-						<li class="item-footer"><a href="audiviosual/publicitario.html" class="item-footer">Publicitario</a></li>
-						<li class="item-footer"><a href="audiviosual/mapping.html" class="item-footer">Mapping</a></li>
+						<li class="item-footer"><a href="audiovisual/institucional.html" class="item-footer">Institucional</a></li>
+						<li class="item-footer"><a href="audiovisual/infraestructura.html" class="item-footer">Infraestructura</a></li>
+						<li class="item-footer"><a href="audiovisual/educativo.html" class="item-footer">Educativo</a></li>
+						<li class="item-footer"><a href="audiovisual/publicitario.html" class="item-footer">Publicitario</a></li>
+						<li class="item-footer"><a href="audiovisual/mapping.html" class="item-footer">Mapping</a></li>
 					</ul>
 
 				</div>
@@ -265,7 +265,7 @@
 						<li class="item-footer"><a class="item-footer" href="espacios/exposiciones.html">Exposiciones</a></li>
 					</ul>
 
-					<a data-toggle="" href="monitoreo/monitoreo.html" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Monitoreo</a>
+					<a data-toggle="" href="monitoreo/monitoreo.html" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top btn-monitoreo">Monitoreo</a>
 					<ul class="d-none d-lg-block lista-footer">
 					</ul>
 
