--- a/es/index.html
+++ b/es/index.html
@@ -154,7 +154,7 @@
 							<img class="d-block d-lg-none w-100 img-fluid" src="../img/slide3-m.jpg" alt="Slide 01">
 						</div>
 						<div class="carousel-item">
-							<img class="d-none d-lg-block w-100 img-fluid" src="../img/slide3.jpg" alt="Slide 04">
+							<img class="d-none d-lg-block w-100 img-fluid" src="../img/slide4.jpg" alt="Slide 04">
 							<img class="d-block d-lg-none w-100 img-fluid" src="../img/slide4-m.jpg" alt="Slide 01">
 						</div>
 					</div>
@@ -165,7 +165,7 @@
 	<div class="index clear"></div>
 
 	<!-- Videos -->
-	<section class="videos">
+	<section id="noticias" class="videos">
 		<div class="video1">
 			<!-- <img src="img/video.png" class="img-fluid"> -->
 			<video src="../video/sarmiento.mp4" type="video/mov" autoplay="true" loop="true" height="100%" width="100%"></video>
@@ -240,7 +240,7 @@
 	</section>
 
 	<!-- Equipo -->
-	<section class="index container equipo">
+	<section id="equipo" class="index container equipo">
 
 		<div class="row justify-content-center">
 			<div class="col-12 col-lg-8 text-center">
@@ -336,7 +336,7 @@
 					<img src="../img/INDEX-EQUIPO-GHM-10.png" class="img-fluid" alt="Gustavo Muñoz">
 					<figcaption>
 						<h3 class="titulo-equipo">Matías</h3>
-						<p class="texto-equipo">Administración</p>
+						<p class="texto-equipo">Animación</p>
 					</figcaption>
 				</figure>
 			</div>
@@ -362,7 +362,7 @@
 	</section>
 
 	<!-- Clientes -->
-	<section class="index container clientes">
+	<section id="clientes" class="index container clientes">
 		<div class="row justify-content-center align-items-center">
 			<div class="col-12 text-center">
 				<h2 class="titulo">Clientes</h2>
@@ -468,7 +468,7 @@
 	</section>
 
 	<!-- Contacto  -->
-	<section class="index contacto">
+	<section id="contacto" class="index contacto">
 		<div class="container">
 			<div class="row" itemscope itemtype="http://schema.org/CreativeWork">
 				<div class="col-12 text-center">
@@ -549,16 +549,16 @@
 	<footer>
 		<div class="container">
 			<div class="row justify-content-center">
-				<div class="d-12 col-md-6 col-lg-3 class-aux">
 
+				<div class="d-12 col-md-6 col-lg-3 class-aux">
 					<a id="closeNav1" data-toggle="" href="#footer-home" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer">Home<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-home" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-						<li class="item-footer"><a class="item-footer" href="#">Acerca de GHM</a></li>
-						<li class="item-footer"><a class="item-footer" href="huevo.html">Gustavo Muñoz Lorenzo</a></li>
-						<li class="item-footer"><a class="item-footer" href="#.">Equipo</a></li>
-						<li class="item-footer"><a class="item-footer" href="#.">Clientes</a></li>
-						<li class="item-footer"><a class="item-footer" href="#.">Noticias</a></li>
-						<li class="item-footer"><a class="item-footer" href="#.">Contacto</a></li>
+						<li class="item-footer"><a class="item-footer" href="#intro">Acerca de GHM</a></li>
+						<li class="item-footer"><a class="item-footer" href="#huevo">Gustavo Muñoz Lorenzo</a></li>
+						<li class="item-footer"><a class="item-footer" href="#equipo">Equipo</a></li>
+						<li class="item-footer"><a class="item-footer" href="#clientes">Clientes</a></li>
+						<li class="item-footer"><a class="item-footer" href="#noticias">Noticias</a></li>
+						<li class="item-footer"><a class="item-footer" href="#contacto">Contacto</a></li>
 					</ul>
 
 					<a id="closeNav2" data-toggle="" href="#footer-audiovisual" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Audiovisual<span class="closeNav d-lg-none">+</span></a>
@@ -569,13 +569,9 @@
 						<li class="item-footer"><a href="audiovisual/publicitario.html" class="item-footer">Publicitario</a></li>
 						<li class="item-footer"><a href="audiovisual/mapping.html" class="item-footer">Mapping</a></li>
 					</ul>
-
 				</div>
 
-
-
 				<div class="d-12 col-md-6 col-lg-3 class-aux">
-
 					<a id="closeNav3" data-toggle="" href="#footer-fotografia" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Fotografía<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-fotografia" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 						<li class="item-footer"><a class="item-footer" href="fotografia/naturaleza.html">Naturaleza</a></li>
@@ -596,13 +592,9 @@
 						<li class="item-footer"><a href="diseno/editorial.html" class="item-footer">Editorial</a></li>
 						<li class="item-footer"><a href="diseno/digital.html" class="item-footer">Digital</a></li>
 					</ul>
-
 				</div>
 
-
-
 				<div class="d-12 col-md-6 col-lg-3 class-aux">
-
 					<a id="closeNav5" data-toggle="" href="#footer-espacios" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Espacios<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-espacios" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 						<li class="item-footer"><a class="item-footer" href="espacios/stand.html">Stand</a></li>
@@ -610,7 +602,7 @@
 						<li class="item-footer"><a class="item-footer" href="espacios/exposiciones.html">Exposiciones</a></li>
 					</ul>
 
-					<a data-toggle="" href="monitoreo/monitoreo.html" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Monitoreo</a>
+					<a data-toggle="" href="monitoreo/monitoreo.html" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top btn-monitoreo">Monitoreo</a>
 					<ul class="d-none d-lg-block lista-footer">
 					</ul>
 
@@ -621,10 +613,7 @@
 					</ul>
 				</div>
 
-
-
 				<div class="d-12 col-md-6 col-lg-3 class-aux">
-
 					<a id="closeNav7" data-toggle="" href="#footer-oficinas" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Nuestra oficina<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-oficinas" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 						<li class="item-footer">Esteban Echeverría <br class="d-none d-lg-block">772 Sur (5400)</li>
@@ -660,5 +649,24 @@
 	<script type="text/javascript" src="../js/popper.min.js"></script>
 	<script type="text/javascript" src="../js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="../js/scripts.js"></script>
+	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js" type="text/javascript" charset="utf-8"></script>
+	<script type="text/javascript">
+		$(function(){
+		     $('a[href*=#]').click(function() {
+		     if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'')
+		         && location.hostname == this.hostname) {
+
+		             var $target = $(this.hash);
+		             $target = $target.length && $target || $('[name=' + this.hash.slice(1) +']');
+
+		             if ($target.length) {
+		                 var targetOffset = $target.offset().top;
+		                 $('html,body').animate({scrollTop: targetOffset}, 600);
+		                 return false;
+		            }
+		       }
+		   });
+		});
+	</script>
 </body>
 </html>
