--- a/es/monitoreo/monitoreo.html
+++ b/es/monitoreo/monitoreo.html
@@ -33,6 +33,7 @@
 </head>
 <body class="index">
 
+	<!-- Header -->
 	<header class="container-fluid">
 		<div class="container lang-container d-none d-lg-block">
 			<div class="row">
@@ -136,12 +137,41 @@
 		</nav>
 	</header>
 	
-	<div class="row mt-5">
-		<div class="col-12 text-center">
-			<p class="titulo">MONITOREO</p>
+	<!-- Contenido -->
+	<div class="container-fluid monitoreo">
+		<div class="row">
+			<div class="col-12">
+				<img src="../../img/MONITOREO-01.jpg" alt="1" class="img-fluid">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-12">
+				<img src="../../img/MONITOREO-02.jpg" alt="2" class="img-fluid">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-12">
+				<img src="../../img/MONITOREO-03.jpg" alt="3" class="img-fluid">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-12">
+				<img src="../../img/MONITOREO-04.jpg" alt="4" class="img-fluid">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-12">
+				<img src="../../img/MONITOREO-05.jpg" alt="5" class="img-fluid">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-12 ultimo">
+				<img src="../../img/MONITOREO-06.jpg" alt="6" class="img-fluid">
+			</div>
 		</div>
 	</div>
 
+	<!-- Footer -->
 	<footer>
 		<div class="container">
 			<div class="row justify-content-center">
@@ -251,6 +281,18 @@
 			</div>
 		</div>
 	</footer>
+
+	<!-- Scroll Spy -->
+	<div class="container-fluid scrollspy">
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<p class="texto">Monitoreo</p>
+				</div>
+			</div>
+		</div>
+	</div>
+
 
 	<script type="text/javascript" src="../../js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="../../js/popper.min.js"></script>
