--- a/es/vuelos/helicoptero.html
+++ b/es/vuelos/helicoptero.html
@@ -319,6 +319,16 @@
 		</div>
 	</footer>
 
+	<!-- Scroll Spy -->
+	<div class="container-fluid scrollspy">
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<p class="texto">Vuelos / Helicóptero</p>
+				</div>
+			</div>
+		</div>
+	</div>
 
 
 
