--- a/es/diseno/grafico.html
+++ b/es/diseno/grafico.html
@@ -332,8 +332,8 @@
 				<div class="carousel slide" id="octavo-carousel" data-ride="carousel">
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<img class="d-block w-100 img-fluid" src="../../img/DISENO-GRAFICO-DESARROLLO-HUMANO-01.jpg" alt="Ministerio de Desarrollo Humano">
-							<!-- <img class="d-xs-block d-lg-none w-100 img-fluid" src="../../img/DISENO-GRAFICO-DESARROLLO-HUMANO-01-M.jpg" alt="Ministerio de Desarrollo Humano"> -->
+							<img class="d-none d-lg-block w-100 img-fluid" src="../../img/DISENO-GRAFICO-DESARROLLO-HUMANO-01.jpg" alt="Ministerio de Desarrollo Humano">
+							<img class="d-xs-block d-lg-none w-100 img-fluid" src="../../img/DISENO-GRAFICO-DESARROLLO-HUMANO-01-M.jpg" alt="Ministerio de Desarrollo Humano">
 						</div>
 					</div>
 				</div>			
@@ -348,7 +348,8 @@
 				<div class="carousel slide" id="noveno-carousel" data-ride="carousel">
 					<div class="carousel-inner">
 						<div class="carousel-item active">
-							<img class="d-block w-100 img-fluid" src="../../img/DISENO-GRAFICO-XTRATA-01.jpg" alt="Xtrata Cooper">
+							<img class="d-none d-lg-block w-100 img-fluid" src="../../img/DISENO-GRAFICO-XTRATA-01.jpg" alt="XTRATA">
+							<img class="d-xs-block d-lg-none w-100 img-fluid" src="../../img/DISENO-GRAFICO-XTRATA-01-M.jpg" alt="XTRATA">
 						</div>
 					</div>
 				</div>			
