--- a/es/audiovisual/institucional.html
+++ b/es/audiovisual/institucional.html
@@ -136,9 +136,11 @@
 		</nav>
 	</header>
 	
-	<div class="row mt-5">
-		<div class="col-12 text-center">
-			<p class="titulo">Audiovisual - Institucional</p>
+	<div class="container">
+		<div class="row mt-5">
+			<div class="col-12 text-center">
+				<p class="titulo">Audiovisual - Institucional</p>
+			</div>
 		</div>
 	</div>
 
@@ -150,12 +152,12 @@
 
 					<a id="closeNav1" data-toggle="" href="#footer-home" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer">Home<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-home" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-						<li class="item-footer"><a class="item-footer" href="../index.html">Acerca de GHM</a></li>
+						<li class="item-footer"><a class="item-footer" href="../index.html#intro">Acerca de GHM</a></li>
 						<li class="item-footer"><a class="item-footer" href="../huevo.html">Gustavo Muñoz Lorenzo</a></li>
-						<li class="item-footer"><a class="item-footer" href="../index.html">Equipo</a></li>
-						<li class="item-footer"><a class="item-footer" href="../index.html">Clientes</a></li>
-						<li class="item-footer"><a class="item-footer" href="../index.html">Noticias</a></li>
-						<li class="item-footer"><a class="item-footer" href="../index.html">Contacto</a></li>
+						<li class="item-footer"><a class="item-footer" href="../index.html#equipo">Equipo</a></li>
+						<li class="item-footer"><a class="item-footer" href="../index.html#clientes">Clientes</a></li>
+						<li class="item-footer"><a class="item-footer" href="../index.html#noticias">Noticias</a></li>
+						<li class="item-footer"><a class="item-footer" href="../index.html#contacto">Contacto</a></li>
 					</ul>
 
 					<a id="closeNav2" data-toggle="" href="#footer-audiovisual" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Audiovisual<span class="closeNav d-lg-none">+</span></a>
@@ -207,7 +209,7 @@
 						<li class="item-footer"><a class="item-footer" href="../espacios/exposiciones.html">Exposiciones</a></li>
 					</ul>
 
-					<a data-toggle="" href="../monitoreo/monitoreo.html" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Monitoreo</a>
+					<a data-toggle="" href="../monitoreo/monitoreo.html" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top btn-monitoreo">Monitoreo</a>
 					<ul class="d-none d-lg-block lista-footer">
 					</ul>
 
@@ -247,7 +249,7 @@
 			</div>
 			<div class="row logoHuevo-container">
 				<div class="d-12 col-md-6 col-lg-3 ml-auto class-aux">
-					<a href="#" class="logoHuevo"><span class="icon-logoHuevo"></span></a>
+					<a href="../index.html" class="logoHuevo"><span class="icon-logoHuevo"></span></a>
 				</div>
 			</div>
 		</div>
