--- a/es/fotografia/artistico.html
+++ b/es/fotografia/artistico.html
@@ -125,7 +125,7 @@
 							<div class="col-12 text-left">
 								<a href="#" id="langEsp" class="lang active">ES</a>
 								<span class="lang">/</span>
-								<a href="../eng/artistico.html" id="langEng" class="lang">EN</a>
+								<a href="../../en/fotografia/artistico.html" id="langEng" class="lang">EN</a>
 							</div>
 						</div>
 					</div>
