--- a/es/fotografia/cruce.html
+++ b/es/fotografia/cruce.html
@@ -125,7 +125,7 @@
 							<div class="col-12 text-left">
 								<a href="#" id="langEsp" class="lang active">ES</a>
 								<span class="lang">/</span>
-								<a href="../eng/fotografia/cruce.html" id="langEng" class="lang">EN</a>
+								<a href="../../en/fotografia/cruce.html" id="langEng" class="lang">EN</a>
 							</div>
 						</div>
 					</div>
@@ -136,11 +136,11 @@
 		</nav>
 	</header>
 	
+	<!-- Contenido -->
 	<div>
 		<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-PRINCIPAL.jpg" class="d-none d-md-block img-fluid">
 		<img src="../../img/FOTOGRAFIA-CRUCE-DE-LOS-ANDES-PRINCIPAL-M.jpg" class="d-block d-md-none img-fluid">
 	</div>
-
 	<div class="container bio d-block d-md-none">
 		<div class="row justify-content-center">
 			<div class="col-12 col-lg-10 text-center container-bio">
@@ -149,7 +149,6 @@
 			</div>
 		</div>
 	</div>
-
 	<div class="container-fluid">
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
@@ -233,12 +232,12 @@
 
 					<a id="closeNav1" data-toggle="" href="#footer-home" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer">Home<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-home" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-						<li class="item-footer"><a class="item-footer" href="../index.html">Acerca de GHM</a></li>
+						<li class="item-footer"><a class="item-footer" href="../index.html#intro">Acerca de GHM</a></li>
 						<li class="item-footer"><a class="item-footer" href="../huevo.html">Gustavo Muñoz Lorenzo</a></li>
-						<li class="item-footer"><a class="item-footer" href="../index.html">Equipo</a></li>
-						<li class="item-footer"><a class="item-footer" href="../index.html">Clientes</a></li>
-						<li class="item-footer"><a class="item-footer" href="../index.html">Noticias</a></li>
-						<li class="item-footer"><a class="item-footer" href="../index.html">Contacto</a></li>
+						<li class="item-footer"><a class="item-footer" href="../index.html#equipo">Equipo</a></li>
+						<li class="item-footer"><a class="item-footer" href="../index.html#clientes">Clientes</a></li>
+						<li class="item-footer"><a class="item-footer" href="../index.html#noticias">Noticias</a></li>
+						<li class="item-footer"><a class="item-footer" href="../index.html#contacto">Contacto</a></li>
 					</ul>
 
 					<a id="closeNav2" data-toggle="" href="#footer-audiovisual" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Audiovisual<span class="closeNav d-lg-none">+</span></a>
@@ -290,7 +289,7 @@
 						<li class="item-footer"><a class="item-footer" href="../espacios/exposiciones.html">Exposiciones</a></li>
 					</ul>
 
-					<a data-toggle="" href="../monitoreo/monitoreo.html" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Monitoreo</a>
+					<a data-toggle="" href="../monitoreo/monitoreo.html" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top btn-monitoreo">Monitoreo</a>
 					<ul class="d-none d-lg-block lista-footer">
 					</ul>
 
@@ -330,7 +329,7 @@
 			</div>
 			<div class="row logoHuevo-container">
 				<div class="d-12 col-md-6 col-lg-3 ml-auto class-aux">
-					<a href="#" class="logoHuevo"><span class="icon-logoHuevo"></span></a>
+					<a href="../index.html" class="logoHuevo"><span class="icon-logoHuevo"></span></a>
 				</div>
 			</div>
 		</div>
