--- a/es/espacios/stand.html
+++ b/es/espacios/stand.html
@@ -32,6 +32,8 @@
 	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body class="index">
+
+	<!-- Header -->
 	<header class="container-fluid">
 		<div class="container lang-container d-none d-lg-block">
 			<div class="row">
@@ -124,7 +126,7 @@
 							<div class="col-12 text-left">
 								<a href="#" id="langEsp" class="lang active">ES</a>
 								<span class="lang">/</span>
-								<a href="../eng/espacios/stand.html" id="langEng" class="lang">EN</a>
+								<a href="../../en/espacios/stand.html" id="langEng" class="lang">EN</a>
 							</div>
 						</div>
 					</div>
@@ -135,9 +137,12 @@
 		</nav>
 	</header>
 	
-	<div class="row mt-5">
-		<div class="col-12 text-center">
-			<p class="titulo">ESPACIOS | STAND</p>
+	<!-- Contenido -->
+	<div class="container-fluid">
+		<div class="row mt-5">
+			<div class="col-12 text-center">
+				<p class="titulo">Espacios / Stand</p>
+			</div>
 		</div>
 	</div>
 
@@ -149,12 +154,12 @@
 
 					<a id="closeNav1" data-toggle="" href="#footer-home" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer">Home<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-home" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-						<li class="item-footer"><a class="item-footer" href="../index.html">Acerca de GHM</a></li>
+						<li class="item-footer"><a class="item-footer" href="../index.html#intro">Acerca de GHM</a></li>
 						<li class="item-footer"><a class="item-footer" href="../huevo.html">Gustavo Muñoz Lorenzo</a></li>
-						<li class="item-footer"><a class="item-footer" href="../index.html">Equipo</a></li>
-						<li class="item-footer"><a class="item-footer" href="../index.html">Clientes</a></li>
-						<li class="item-footer"><a class="item-footer" href="../index.html">Noticias</a></li>
-						<li class="item-footer"><a class="item-footer" href="../index.html">Contacto</a></li>
+						<li class="item-footer"><a class="item-footer" href="../index.html#equipo">Equipo</a></li>
+						<li class="item-footer"><a class="item-footer" href="../index.html#clientes">Clientes</a></li>
+						<li class="item-footer"><a class="item-footer" href="../index.html#noticias">Noticias</a></li>
+						<li class="item-footer"><a class="item-footer" href="../index.html#contacto">Contacto</a></li>
 					</ul>
 
 					<a id="closeNav2" data-toggle="" href="#footer-audiovisual" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Audiovisual<span class="closeNav d-lg-none">+</span></a>
@@ -206,7 +211,7 @@
 						<li class="item-footer"><a class="item-footer" href="../espacios/exposiciones.html">Exposiciones</a></li>
 					</ul>
 
-					<a data-toggle="" href="../monitoreo/monitoreo.html" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Monitoreo</a>
+					<a data-toggle="" href="../monitoreo/monitoreo.html" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top btn-monitoreo">Monitoreo</a>
 					<ul class="d-none d-lg-block lista-footer">
 					</ul>
 
@@ -251,6 +256,17 @@
 			</div>
 		</div>
 	</footer>
+
+	<!-- Scroll Spy -->
+	<div class="container-fluid scrollspy">
+		<div class="container">
+			<div class="row">
+				<div class="col-12">
+					<p class="texto">Espacios / Stand</p>
+				</div>
+			</div>
+		</div>
+	</div>
 
 	<script type="text/javascript" src="../../js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="../../js/popper.min.js"></script>
