--- a/es/vuelos/helicoptero.html
+++ b/es/vuelos/helicoptero.html
@@ -89,7 +89,7 @@
 					        	<a class="dropdown-item" href="../fotografia/retrato.html">Retrato</a>
 					        	<a class="dropdown-item" href="../fotografia/producciones.html">Producciones en estudio</a>
 					        	<a class="dropdown-item" href="../fotografia/agricultura.html">Agricultura</a>
-					        	<a class="dropdown-item" href="#">Cruce de Los Andes</a>
+					        	<a class="dropdown-item" href="../fotografia/cruce.html">Cruce de Los Andes</a>
 					        </div>
 						</li>
 						<li class="nav-item dropdown">
@@ -126,7 +126,7 @@
 							<div class="col-12 text-left">
 								<a href="#" id="langEsp" class="lang active">ES</a>
 								<span class="lang">/</span>
-								<a href="../eng/vuelos/helicoptero.html" id="langEng" class="lang">EN</a>
+								<a href="../../en/vuelos/helicoptero.html" id="langEng" class="lang">EN</a>
 							</div>
 						</div>
 					</div>
@@ -137,6 +137,7 @@
 		</nav>
 	</header>
 	
+	<!-- Contenido -->
 	<div>
 		<img src="../../img/VUELOS-HELICOPTERO-PRINCIPAL.jpg" class="d-none d-md-block img-fluid">
 		<img src="../../img/VUELOS-HELICOPTERO-PRINCIPAL-M.jpg" class="d-block d-md-none img-fluid">
@@ -216,12 +217,12 @@
 
 					<a id="closeNav1" data-toggle="" href="#footer-home" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer">Home<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-home" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
-						<li class="item-footer"><a class="item-footer" href="../index.html">Acerca de GHM</a></li>
+						<li class="item-footer"><a class="item-footer" href="../index.html#intro">Acerca de GHM</a></li>
 						<li class="item-footer"><a class="item-footer" href="../huevo.html">Gustavo Muñoz Lorenzo</a></li>
-						<li class="item-footer"><a class="item-footer" href="../index.html">Equipo</a></li>
-						<li class="item-footer"><a class="item-footer" href="../index.html">Clientes</a></li>
-						<li class="item-footer"><a class="item-footer" href="../index.html">Noticias</a></li>
-						<li class="item-footer"><a class="item-footer" href="../index.html">Contacto</a></li>
+						<li class="item-footer"><a class="item-footer" href="../index.html#equipo">Equipo</a></li>
+						<li class="item-footer"><a class="item-footer" href="../index.html#clientes">Clientes</a></li>
+						<li class="item-footer"><a class="item-footer" href="../index.html#noticias">Noticias</a></li>
+						<li class="item-footer"><a class="item-footer" href="../index.html#contacto">Contacto</a></li>
 					</ul>
 
 					<a id="closeNav2" data-toggle="" href="#footer-audiovisual" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Audiovisual<span class="closeNav d-lg-none">+</span></a>
@@ -273,7 +274,7 @@
 						<li class="item-footer"><a class="item-footer" href="../espacios/exposiciones.html">Exposiciones</a></li>
 					</ul>
 
-					<a data-toggle="" href="../monitoreo/monitoreo.html" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Monitoreo</a>
+					<a data-toggle="" href="../monitoreo/monitoreo.html" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top btn-monitoreo">Monitoreo</a>
 					<ul class="d-none d-lg-block lista-footer">
 					</ul>
 
@@ -313,7 +314,7 @@
 			</div>
 			<div class="row logoHuevo-container">
 				<div class="d-12 col-md-6 col-lg-3 ml-auto class-aux">
-					<a href="#" class="logoHuevo"><span class="icon-logoHuevo"></span></a>
+					<a href="../index.html" class="logoHuevo"><span class="icon-logoHuevo"></span></a>
 				</div>
 			</div>
 		</div>
@@ -329,8 +330,6 @@
 			</div>
 		</div>
 	</div>
-
-
 
 	<script type="text/javascript" src="../../js/jquery-3.2.1.min.js"></script>
 	<script type="text/javascript" src="../../js/popper.min.js"></script>
