ajustes para subir web

--- a/es/diseno/digital.html
+++ b/es/diseno/digital.html
@@ -141,44 +141,44 @@
 	<div class="row diseno d-digital">
 		<div class="col-12 diseno">
 			<a href="http://www.losviajesdesarmiento.com/" target="_blank">
-				<img src="../../img/DISENO-DIGITAL-01.jpg" class="d-none d-lg-block img-fluid" alt="Los viajes de Sarmiento">
-				<img src="../../img/DISENO-DIGITAL-01-M.jpg" class="d-block d-lg-none img-fluid" alt="Los viajes de Sarmiento">
+				<img src="../../img/DISENO-DIGITAL-01.jpg" class="d-none d-lg-block w-100 img-fluid" alt="Los viajes de Sarmiento">
+				<img src="../../img/DISENO-DIGITAL-01-M.jpg" class="d-block d-lg-none w-100 img-fluid" alt="Los viajes de Sarmiento">
 			</a>
 		</div>
 		<div class="col-12 diseno d-digital">
 			<a href="#.">
-				<img src="../../img/DISENO-DIGITAL-02.jpg" class="d-none d-lg-block img-fluid" alt="Finca el Enlace">
-				<img src="../../img/DISENO-DIGITAL-02-M.jpg" class="d-block d-lg-none img-fluid" alt="Finca el Enlace">
+				<img src="../../img/DISENO-DIGITAL-02.jpg" class="d-none d-lg-block w-100 img-fluid" alt="Finca el Enlace">
+				<img src="../../img/DISENO-DIGITAL-02-M.jpg" class="d-block d-lg-none w-100 img-fluid" alt="Finca el Enlace">
 			</a>
 		</div>
 		<div class="col-12 diseno d-digital">
 			<a href="http://www.pampasdelcura.com/" target="_blank">
-				<img src="../../img/DISENO-DIGITAL-03.jpg" class="d-none d-lg-block img-fluid" alt="Finca el Enlace">
-				<img src="../../img/DISENO-DIGITAL-03-M.jpg" class="d-block d-lg-none img-fluid" alt="Finca el Enlace">
+				<img src="../../img/DISENO-DIGITAL-03.jpg" class="d-none d-lg-block w-100 img-fluid" alt="Finca el Enlace">
+				<img src="../../img/DISENO-DIGITAL-03-M.jpg" class="d-block d-lg-none w-100 img-fluid" alt="Finca el Enlace">
 			</a>
 		</div>
 		<div class="col-12 diseno d-digital">
 			<a href="http://www.toyotasanjuan.com.ar/web/" target="_blank">
-				<img src="../../img/DISENO-DIGITAL-04.jpg" class="d-none d-lg-block img-fluid" alt="Toyota San Juan">
-				<img src="../../img/DISENO-DIGITAL-04-M.jpg" class="d-block d-lg-none img-fluid" alt="Toyota San Juan">
+				<img src="../../img/DISENO-DIGITAL-04.jpg" class="d-none d-lg-block w-100 img-fluid" alt="Toyota San Juan">
+				<img src="../../img/DISENO-DIGITAL-04-M.jpg" class="d-block d-lg-none w-100 img-fluid" alt="Toyota San Juan">
 			</a>
 		</div>
 		<div class="col-12 diseno d-digital">
 			<a href="https://www.conduciendobien.com.ar/" target="_blank">
-				<img src="../../img/DISENO-DIGITAL-05.jpg" class="d-none d-lg-block img-fluid" alt="Conduciendo Bein">
-				<img src="../../img/DISENO-DIGITAL-05-M.jpg" class="d-block d-lg-none img-fluid" alt="Conduciendo Bein">
+				<img src="../../img/DISENO-DIGITAL-05.jpg" class="d-none d-lg-block w-100 img-fluid" alt="Conduciendo Bein">
+				<img src="../../img/DISENO-DIGITAL-05-M.jpg" class="d-block d-lg-none w-100 img-fluid" alt="Conduciendo Bein">
 			</a>
 		</div>
 		<div class="col-12 diseno d-digital">
 			<a href="http://www.afsadesarrollos.com.ar/terranova" target="_blank">
-				<img src="../../img/DISENO-DIGITAL-06.jpg" class="d-none d-lg-block img-fluid" alt="Afsa Desarrollos - Terranova">
-				<img src="../../img/DISENO-DIGITAL-06-M.jpg" class="d-block d-lg-none img-fluid" alt="Afsa Desarrollos - Terranova">
+				<img src="../../img/DISENO-DIGITAL-06.jpg" class="d-none d-lg-block w-100 img-fluid" alt="Afsa Desarrollos - Terranova">
+				<img src="../../img/DISENO-DIGITAL-06-M.jpg" class="d-block d-lg-none w-100 img-fluid" alt="Afsa Desarrollos - Terranova">
 			</a>
 		</div>
 		<div class="col-12 diseno d-digital ultimo">
 			<a href="http://www.americamayorista.com.ar/" target="_blank">
-				<img src="../../img/DISENO-DIGITAL-07.jpg" class="d-none d-lg-block img-fluid" alt="Afsa Desarrollos - Terranova">
-				<img src="../../img/DISENO-DIGITAL-07-M.jpg" class="d-block d-lg-none img-fluid" alt="Afsa Desarrollos - Terranova">
+				<img src="../../img/DISENO-DIGITAL-07.jpg" class="d-none d-lg-block w-100 img-fluid" alt="Afsa Desarrollos - Terranova">
+				<img src="../../img/DISENO-DIGITAL-07-M.jpg" class="d-block d-lg-none w-100 img-fluid" alt="Afsa Desarrollos - Terranova">
 			</a>
 		</div>
 	</div>
@@ -187,7 +187,7 @@
 	<footer>
 		<div class="container">
 			<div class="row justify-content-center">
-				<div class="d-12 col-md-6 col-lg-3 class-aux">
+				<div class="d-12 col-lg-3 class-aux">
 
 					<a id="closeNav1" data-toggle="" href="#footer-home" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer">Home<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-home" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
@@ -207,12 +207,9 @@
 						<li class="item-footer"><a href="../audiovisual/publicitario.html" class="item-footer">Publicitario</a></li>
 						<li class="item-footer"><a href="../audiovisual/mapping.html" class="item-footer">Mapping</a></li>
 					</ul>
-
 				</div>
 
-
-
-				<div class="d-12 col-md-6 col-lg-3 class-aux">
+				<div class="d-12 col-lg-3 class-aux">
 
 					<a id="closeNav3" data-toggle="" href="#footer-fotografia" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Fotografía<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-fotografia" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
@@ -234,12 +231,9 @@
 						<li class="item-footer"><a href="../diseno/editorial.html" class="item-footer">Editorial</a></li>
 						<li class="item-footer"><a href="../diseno/digital.html" class="item-footer">Digital</a></li>
 					</ul>
-
 				</div>
 
-
-
-				<div class="d-12 col-md-6 col-lg-3 class-aux">
+				<div class="d-12 col-lg-3 class-aux">
 
 					<a id="closeNav5" data-toggle="" href="#footer-espacios" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Espacios<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-espacios" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
@@ -259,9 +253,7 @@
 					</ul>
 				</div>
 
-
-
-				<div class="d-12 col-md-6 col-lg-3 class-aux">
+				<div class="d-12 col-lg-3 class-aux">
 
 					<a id="closeNav7" data-toggle="" href="#footer-oficinas" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Nuestra oficina<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-oficinas" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
@@ -276,18 +268,16 @@
 						</ul>
 					</ul>
 
-
 					<a id="closeNav8" data-toggle="" href="#footer-trabaja" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Trabajá con nosotros<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-trabaja" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 						<li class="item-footer"><a class="item-footer" href="mailto:ghmtv@ghmtv.com">ghmtv@ghmtv.com</a></li>
 					</ul>
-					<div class="d-12 col-md-6 col-lg-3 class-aux border-top"></div>
-
+					<div class="d-12 col-lg-3 class-aux border-top"></div>
 				</div>
 
 			</div>
 			<div class="row logoHuevo-container">
-				<div class="d-12 col-md-6 col-lg-3 ml-auto class-aux">
+				<div class="d-12 col-lg-3 ml-auto class-aux">
 					<a href="../index.html" class="logoHuevo"><span class="icon-logoHuevo"></span></a>
 				</div>
 			</div>
