--- a/es/fotografia/extremo.html
+++ b/es/fotografia/extremo.html
@@ -257,7 +257,7 @@
 	<footer>
 		<div class="container">
 			<div class="row justify-content-center">
-				<div class="d-12 col-md-6 col-lg-3 class-aux">
+				<div class="d-12 col-lg-3 class-aux">
 
 					<a id="closeNav1" data-toggle="" href="#footer-home" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer">Home<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-home" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
@@ -277,13 +277,9 @@
 						<li class="item-footer"><a href="../audiovisual/publicitario.html" class="item-footer">Publicitario</a></li>
 						<li class="item-footer"><a href="../audiovisual/mapping.html" class="item-footer">Mapping</a></li>
 					</ul>
-
 				</div>
 
-
-
-				<div class="d-12 col-md-6 col-lg-3 class-aux">
-
+				<div class="d-12 col-lg-3 class-aux">
 					<a id="closeNav3" data-toggle="" href="#footer-fotografia" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Fotografía<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-fotografia" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 						<li class="item-footer"><a class="item-footer" href="../fotografia/naturaleza.html">Naturaleza</a></li>
@@ -304,13 +300,9 @@
 						<li class="item-footer"><a href="../diseno/editorial.html" class="item-footer">Editorial</a></li>
 						<li class="item-footer"><a href="../diseno/digital.html" class="item-footer">Digital</a></li>
 					</ul>
-
 				</div>
 
-
-
-				<div class="d-12 col-md-6 col-lg-3 class-aux">
-
+				<div class="d-12 col-lg-3 class-aux">
 					<a id="closeNav5" data-toggle="" href="#footer-espacios" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Espacios<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-espacios" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 						<li class="item-footer"><a class="item-footer" href="../espacios/stand.html">Stand</a></li>
@@ -331,7 +323,7 @@
 
 
 
-				<div class="d-12 col-md-6 col-lg-3 class-aux">
+				<div class="d-12 col-lg-3 class-aux">
 
 					<a id="closeNav7" data-toggle="" href="#footer-oficinas" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Nuestra oficina<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-oficinas" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
@@ -346,18 +338,16 @@
 						</ul>
 					</ul>
 
-
 					<a id="closeNav8" data-toggle="" href="#footer-trabaja" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Trabajá con nosotros<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-trabaja" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 						<li class="item-footer"><a class="item-footer" href="mailto:ghmtv@ghmtv.com">ghmtv@ghmtv.com</a></li>
 					</ul>
-					<div class="d-12 col-md-6 col-lg-3 class-aux border-top"></div>
-
+					<div class="d-12 col-lg-3 class-aux border-top"></div>
 				</div>
 
 			</div>
 			<div class="row logoHuevo-container">
-				<div class="d-12 col-md-6 col-lg-3 ml-auto class-aux">
+				<div class="d-12 col-lg-3 ml-auto class-aux">
 					<a href="../index.html" class="logoHuevo"><span class="icon-logoHuevo"></span></a>
 				</div>
 			</div>
