--- a/es/huevo.html
+++ b/es/huevo.html
@@ -136,11 +136,11 @@
 		</nav>
 	</header>
 	
+	<!-- Contenido -->
 	<div>
 		<img src="../img/BIOGRAFIA-HUEVO-01.jpg" class="d-none d-md-block img-fluid">
 		<img src="../img/BIOGRAFIA-HUEVO.jpg" class="d-block d-md-none img-fluid">
 	</div>
-
 	<div class="container bio">
 		<div class="row justify-content-center">
 			<div class="col-12 col-lg-10 text-center container-bio">
@@ -150,7 +150,8 @@
 		</div>
 	</div>
 
-	<div class="container-fluid">
+	<!-- Estas son las fotos, estan comentadas porque todavia no tenemos las fotos ni sus textos -->
+<!-- 	<div class="container-fluid">
 		<div class="row align-items-center">
 			<div class="col-12 col-md-6 order-1 div-sp">
 				<img src="../img/video.png" class="img-fluid">
@@ -198,14 +199,13 @@
 				<p class="texto">Lorem ipsum dolor sit.</p>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
 	<!-- Footer -->
 	<footer>
 		<div class="container">
 			<div class="row justify-content-center">
-				<div class="d-12 col-md-6 col-lg-3 class-aux">
-
+				<div class="d-12 col-lg-3 class-aux">
 					<a id="closeNav1" data-toggle="" href="#footer-home" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer">Home<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-home" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 						<li class="item-footer"><a class="item-footer" href="index.html#intro">Acerca de GHM</a></li>
@@ -224,13 +224,9 @@
 						<li class="item-footer"><a href="audiovisual/publicitario.html" class="item-footer">Publicitario</a></li>
 						<li class="item-footer"><a href="audiovisual/mapping.html" class="item-footer">Mapping</a></li>
 					</ul>
-
 				</div>
 
-
-
-				<div class="d-12 col-md-6 col-lg-3 class-aux">
-
+				<div class="d-12 col-lg-3 class-aux">
 					<a id="closeNav3" data-toggle="" href="#footer-fotografia" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Fotografía<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-fotografia" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 						<li class="item-footer"><a class="item-footer" href="fotografia/naturaleza.html">Naturaleza</a></li>
@@ -251,13 +247,9 @@
 						<li class="item-footer"><a href="diseno/editorial.html" class="item-footer">Editorial</a></li>
 						<li class="item-footer"><a href="diseno/digital.html" class="item-footer">Digital</a></li>
 					</ul>
-
 				</div>
 
-
-
-				<div class="d-12 col-md-6 col-lg-3 class-aux">
-
+				<div class="d-12 col-lg-3 class-aux">
 					<a id="closeNav5" data-toggle="" href="#footer-espacios" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Espacios<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-espacios" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 						<li class="item-footer"><a class="item-footer" href="espacios/stand.html">Stand</a></li>
@@ -276,10 +268,7 @@
 					</ul>
 				</div>
 
-
-
-				<div class="d-12 col-md-6 col-lg-3 class-aux">
-
+				<div class="d-12 col-lg-3 class-aux">
 					<a id="closeNav7" data-toggle="" href="#footer-oficinas" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Nuestra oficina<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-oficinas" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 						<li class="item-footer">Esteban Echeverría <br class="d-none d-lg-block">772 Sur (5400)</li>
@@ -298,13 +287,11 @@
 					<ul id="footer-trabaja" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 						<li class="item-footer"><a class="item-footer" href="mailto:ghmtv@ghmtv.com">ghmtv@ghmtv.com</a></li>
 					</ul>
-					<div class="d-12 col-md-6 col-lg-3 class-aux border-top"></div>
-
+					<div class="d-12 col-lg-3 class-aux border-top"></div>
 				</div>
-
 			</div>
 			<div class="row logoHuevo-container">
-				<div class="d-12 col-md-6 col-lg-3 ml-auto class-aux">
+				<div class="d-12 col-lg-3 ml-auto class-aux">
 					<a href="index.html" class="logoHuevo"><span class="icon-logoHuevo"></span></a>
 				</div>
 			</div>
