--- a/oops.html
+++ b/oops.html
@@ -2,9 +2,21 @@
 <html lang="es">
 <head>
 	<meta charset="UTF-8">
-	<title>oops!</title>
+	<title>GHM - Contenidos</title>
+	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="css/mantenimiento.css">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 </head>
 <body>
-	Parece que la página que buscas no exite.
+
+	<div class="row login justify-content-center align-items-center">
+		<div id="form-login" class="col-12 col-lg-4">
+			<h1 class="titulo error text-center"><span class="icon-logoHuevo"></span></h1><br>
+			<p class="texto text-center">
+				oops! Parece que la página que buscas no existe. Visita <a href="http://www.ghmtv.com"> GHM Contenidos</a>
+			</p>
+		</div>
+	</div>
+
 </body>
 </html>
