--- a/es/index.html
+++ b/es/index.html
@@ -550,7 +550,7 @@
 		<div class="container">
 			<div class="row justify-content-center">
 
-				<div class="d-12 col-md-6 col-lg-3 class-aux">
+				<div class="d-12 col-lg-3 class-aux">
 					<a id="closeNav1" data-toggle="" href="#footer-home" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer">Home<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-home" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 						<li class="item-footer"><a id="btn-slide-intro" class="item-footer" href="#intro">Acerca de GHM</a></li>
@@ -571,7 +571,7 @@
 					</ul>
 				</div>
 
-				<div class="d-12 col-md-6 col-lg-3 class-aux">
+				<div class="d-12 col-lg-3 class-aux">
 					<a id="closeNav3" data-toggle="" href="#footer-fotografia" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Fotografía<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-fotografia" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 						<li class="item-footer"><a class="item-footer" href="fotografia/naturaleza.html">Naturaleza</a></li>
@@ -594,7 +594,7 @@
 					</ul>
 				</div>
 
-				<div class="d-12 col-md-6 col-lg-3 class-aux">
+				<div class="d-12 col-lg-3 class-aux">
 					<a id="closeNav5" data-toggle="" href="#footer-espacios" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Espacios<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-espacios" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 						<li class="item-footer"><a class="item-footer" href="espacios/stand.html">Stand</a></li>
@@ -613,7 +613,7 @@
 					</ul>
 				</div>
 
-				<div class="d-12 col-md-6 col-lg-3 class-aux">
+				<div class="d-12 col-lg-3 class-aux">
 					<a id="closeNav7" data-toggle="" href="#footer-oficinas" aria-expanded="false" aria-controls="collapseOne" class="titulo-footer border-top">Nuestra oficina<span class="closeNav d-lg-none">+</span></a>
 					<ul id="footer-oficinas" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 						<li class="item-footer">Esteban Echeverría <br class="d-none d-lg-block">772 Sur (5400)</li>
@@ -632,13 +632,13 @@
 					<ul id="footer-trabaja" class="collapse show lista-footer" role="tabpanel" aria-labelledby="headingOne" data-parent="#accordion">
 						<li class="item-footer"><a class="item-footer" href="mailto:ghmtv@ghmtv.com">ghmtv@ghmtv.com</a></li>
 					</ul>
-					<div class="d-12 col-md-6 col-lg-3 class-aux border-top"></div>
+					<div class="d-12 col-lg-3 class-aux border-top"></div>
 
 				</div>
 
 			</div>
 			<div class="row logoHuevo-container">
-				<div class="d-12 col-md-6 col-lg-3 ml-auto class-aux">
+				<div class="d-12 col-lg-3 ml-auto class-aux">
 					<a href="#" class="logoHuevo"><span class="icon-logoHuevo"></span></a>
 				</div>
 			</div>
