haciendo deploy de la web

--- a/es/index.html
+++ b/es/index.html
@@ -252,7 +252,7 @@
 		<div class="row justify-content-center">
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="../img/INDEX-EQUIPO-GHM-01.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/INDEX-EQUIPO-GHM-01.png" class="img-fluid" alt="GHM Cotenidos - Gustavo">
 					<figcaption>
 						<h3 class="titulo-equipo">Gustavo</h3>
 						<p class="texto-equipo">Director general</p>
@@ -261,7 +261,7 @@
 			</div>
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="../img/INDEX-EQUIPO-GHM-02.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/INDEX-EQUIPO-GHM-02.png" class="img-fluid" alt="GHM Cotenidos - Gabriela">
 					<figcaption>
 						<h3 class="titulo-equipo">Gabriela</h3>
 						<p class="texto-equipo">Directora creativa</p>
@@ -270,7 +270,7 @@
 			</div>
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="../img/INDEX-EQUIPO-GHM-03.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/INDEX-EQUIPO-GHM-03.png" class="img-fluid" alt="GHM Cotenidos - Valentín">
 					<figcaption>
 						<h3 class="titulo-equipo">Valentín</h3>
 						<p class="texto-equipo">Diseño</p>
@@ -279,7 +279,7 @@
 			</div>
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="../img/INDEX-EQUIPO-GHM-04.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/INDEX-EQUIPO-GHM-04.png" class="img-fluid" alt="GHM Cotenidos - Belén">
 					<figcaption>
 						<h3 class="titulo-equipo">Belén</h3>
 						<p class="texto-equipo">Diseño</p>
@@ -288,7 +288,7 @@
 			</div>
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="../img/INDEX-EQUIPO-GHM-05.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/INDEX-EQUIPO-GHM-05.png" class="img-fluid" alt="GHM Cotenidos - Analía">
 					<figcaption>
 						<h3 class="titulo-equipo">Analía</h3>
 						<p class="texto-equipo">Diseño</p>
@@ -297,7 +297,7 @@
 			</div>
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="../img/INDEX-EQUIPO-GHM-06.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/INDEX-EQUIPO-GHM-06.png" class="img-fluid" alt="GHM Cotenidos - Guillermina">
 					<figcaption>
 						<h3 class="titulo-equipo">Guillermina</h3>
 						<p class="texto-equipo">Diseño</p>
@@ -306,7 +306,7 @@
 			</div>
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="../img/INDEX-EQUIPO-GHM-07.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/INDEX-EQUIPO-GHM-07.png" class="img-fluid" alt="GHM Cotenidos - Mercedes">
 					<figcaption>
 						<h3 class="titulo-equipo">Mercedes</h3>
 						<p class="texto-equipo">Diseño</p>
@@ -315,7 +315,7 @@
 			</div>
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="../img/INDEX-EQUIPO-GHM-08.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/INDEX-EQUIPO-GHM-08.png" class="img-fluid" alt="GHM Cotenidos - Katharina">
 					<figcaption>
 						<h3 class="titulo-equipo">Katharina</h3>
 						<p class="texto-equipo">Administración</p>
@@ -324,7 +324,7 @@
 			</div>
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="../img/INDEX-EQUIPO-GHM-09.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/INDEX-EQUIPO-GHM-09.png" class="img-fluid" alt="GHM Cotenidos - Enrique">
 					<figcaption>
 						<h3 class="titulo-equipo">Enrique</h3>
 						<p class="texto-equipo">Administración</p>
@@ -333,7 +333,7 @@
 			</div>
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="../img/INDEX-EQUIPO-GHM-10.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/INDEX-EQUIPO-GHM-10.png" class="img-fluid" alt="GHM Contenidos - Matías">
 					<figcaption>
 						<h3 class="titulo-equipo">Matías</h3>
 						<p class="texto-equipo">Animación</p>
@@ -342,7 +342,7 @@
 			</div>
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="../img/INDEX-EQUIPO-GHM-11.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/INDEX-EQUIPO-GHM-11.png" class="img-fluid" alt="GHM Contenidos - Milagros">
 					<figcaption>
 						<h3 class="titulo-equipo">Milagros</h3>
 						<p class="texto-equipo">Producción</p>
@@ -351,7 +351,7 @@
 			</div>
 			<div class="col-6 col-lg-4 text-center fila">
 				<figure>
-					<img src="../img/avatarEquipo.png" class="img-fluid" alt="Gustavo Muñoz">
+					<img src="../img/INDEX-EQUIPO-GHM-12.png" class="img-fluid" alt="GHM Contenidos - Ezequiel">
 					<figcaption>
 						<h3 class="titulo-equipo">Ezequiel</h3>
 						<p class="texto-equipo">Informática</p>
